<resources>
    <string name="app_name">Memory</string>
    <string name="headerMenu">Memory Game</string>
    <string name="singlePlayerButton">Quick Game</string>
    <string name="optionsMenu">Options</string>
    <string name="TwoPlayersButton">Two Players</string>
    <string name="MultiplayerButton">Multiplayer</string>
    <string name="LevelCButton">Create Level</string>
    <string name="headerSinglePlayer">Level</string>
    <string name="dialogMessage1">Leave the Game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="headerCreateLevel">New Level</string>
    <string name="textLevelName">Name</string>
    <string name="switchIntruders">Include intruders</string>
    <string name="tv1CreateLevel">Number of Pairs</string>
    <string name="tv2CreateLevel">Intruder Pairs</string>
    <string name="textViewAddCards">Choose the Pairs</string>
    <string name="textViewAddIntruders">Choose the Intruders</string>
    <string name="createLevelButton">Create</string>
    <string name="nextButton">Next</string>
    <string name="checkbox1title">Intruder Pairs</string>
    <string name="checkbox1summary">Pairs out of context of the themes wont count for the score</string>
    <string name="checkbox2title">Show cards at the beginning</string>
    <string name="checkbox2Summary">Cards showed turned up at the beginning of the game</string>
    <string name="clickModeTitle">Click mode</string>
    <string name="clickModeSummary">Click mode to turn a card</string>
    <string name="settingsCategory1Title">Game options</string>
    <string name="settingsCategory2Title">Info</string>
    <string name="settingsDialogTitle">About</string>
    <string name="settingsDialogSummary">V.1</string>
    <string name="score">Points</string>
    <string name="animals">Animals</string>
    <string name="music">Music</string>
    <string name="gameOverDialogHeader">The Game has Finished!</string>
    <string name="gameOverDialogMsg">New HighScore: </string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="id">ID</string>
    <string name="highscoreTitle">Highscores</string>
    <string name="user">Username</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player1Won">Player 1 Won</string>
    <string name="player2Won">Player 2 Lost</string>
    <string name="draw">Its a Draw!</string>
    <string name="player1Turns">Player 1 turn</string>
    <string name="player2Turns">Player 2 turn</string>
    <string name="multiplayerChooserTitle">Multiplayer</string>
    <string name="multiplayerChooserServer">Create Game</string>
    <string name="multiplayerChooserClient">Enter Game</string>
    <string name="dialogClientTitle">Connect to Server</string>
    <string name="dialogClientMessage">IP:</string>
    <string name="dialogClientConfirm">Enter</string>
    <string name="dialogClientCancel">Cancel</string>
    <string name="dialogServerTitle">Waiting for other Player</string>
    <string name="dialogServerMsg">Game Level: </string>
    <string name="toastEmptyTextName">Choose a name</string>
    <string name="toastFewImgs">Missing images</string>
    <string name="toastNameInUse">That name is already in use</string>
    <string name="toastClientNotFound">Client not found</string>
    <string name="toastWrongIPFormat">Wrong IP format</string>
    <string name="toastEmptyIP">IP is empty</string>
    <string name="toastPermissionsDenied">Permissions Denied!</string>
    <string name="abortedMsg">Your opponent left the game. You win!</string>
    <string name="youWin">You Win :D</string>
    <string name="youLost">You Lost :(</string>
    <string name="settingsClickTimeTittle">Double click time</string>
    <string name="settingsClickTimeSummary">Time between clicks</string>
    <string name="toast15Pairs">You can only choose up to 15 pairs</string>
    <string name="toastQuit">Press again to quit</string>
    <string name="toastNoWiFi">No Wi-Fi Connection detected</string>
</resources>
