<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trophiesButton"
            android:layout_weight="1"
            android:onClick="onHighscoresClick"
            android:nestedScrollingEnabled="false" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/optionsButton"
            android:layout_weight="1"
            android:onClick="onSettings" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:textSize="28sp"
        android:layout_weight="2"
        android:id="@+id/menuHeader"
        android:text="@string/headerMenu" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singlePlayerButton"
        android:id="@+id/singlePlayerButton"
        android:onClick="onSinglePlayerClick"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TwoPlayersButton"
        android:id="@+id/twoPlayersButton"
        android:layout_weight="1"
        android:onClick="onTwoPlayersClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MultiplayerButton"
        android:id="@+id/multiplayerButton"
        android:layout_weight="1"
        android:onClick="onMultiplayerClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/levelCretorButton"
        android:layout_weight="1"
        android:text="@string/LevelCButton"
        android:onClick="onCreateLevel" />

</LinearLayout>
