<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.isec.pem.memory.MultiplayerChooserActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/multiplayerChooserTitle"
        android:id="@+id/textView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:textSize="28sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/multiplayerChooserServer"
        android:id="@+id/clientButton"
        android:layout_weight="1"
        android:onClick="onServerClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/multiplayerChooserClient"
        android:id="@+id/serverButton"
        android:layout_weight="1"
        android:onClick="onClientClick" />
</LinearLayout>
