<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.isec.pem.memory.MakeLevelActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewAddCards"
        android:id="@+id/textViewCards"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="0"
        android:textAlignment="center"
        android:textSize="20dp" />

    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gridViewCards"
        android:numColumns="5"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewAddIntruders"
        android:id="@+id/textViewIntruders"
        android:layout_weight="0"
        android:textAlignment="center"
        android:textSize="20dp" />

    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gridViewIntruders"
        android:numColumns="5"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createLevelButton"
        android:id="@+id/buttonCreateLevel"
        android:onClick="onMakingLevel"
        android:layout_gravity="right" />

</LinearLayout>
